5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1595_842.log
== TEST (2019-04-02 15:14:53) 
-- CODE:
x=(z+a+c+v)
z=3
a=1
c=4
v=1
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=(z+a+c+v)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:15:03) 
-- CODE:
x=int(z+a+c+v)
z=3
a=1
c=4
v=1
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(z+a+c+v)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:46:02) 
-- CODE:
x=int(z+a+c+v)
z=3
a=1
c=4
v=1
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(z+a+c+v)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:47:35) 
-- CODE:
soma=int(z+a+c+v)
z=3
a=1
c=4
v=1
print(soma)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    soma=int(z+a+c+v)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:48:34) 
-- CODE:
var=float(input("numero inteiro de quatro digitos:"))
z=3
a=1
c=4
v=1
soma=int(z+a+c+v)
print(soma)


-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:48:43) 
-- CODE:
var=float(input("numero inteiro de quatro digitos:"))
z=3
a=1
c=4
v=1
soma=int(z+a+c+v)
print(soma)


-- EXECUTION TIME:
0.16687
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:49:03) 
-- CODE:
var=float(input("numero inteiro de quatro digitos:"))
soma=int(z+a+c+v)
print(soma)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    soma=int(z+a+c+v)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:49:23) 
-- CODE:
var=float(input("numero inteiro de quatro digitos:"))
print(var)


-- OUTPUT:
9173.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:20:12) 
-- CODE:
var=float(input("numero inteiro de quatro digitos:"))
num1=(3141//1047)
num2=(3141//3141)
num3=(3141//785)
num4=(3141%4)

print(num1+num2+num3+num4)


-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:20:18) 
-- CODE:
var=float(input("numero inteiro de quatro digitos:"))
num1=(3141//1047)
num2=(3141//3141)
num3=(3141//785)
num4=(3141%4)

print(num1+num2+num3+num4)


-- EXECUTION TIME:
0.212951
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:32:44) 
-- CODE:
var=int(input("numero inteiro de quatro digitos:"))
num1=(3141//1047)
num2=(3141//3141)
num3=(3141//785)
num4=(3141%4)

print(num1+num2+num3+num4)


-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:32:49) 
-- CODE:
var=int(input("numero inteiro de quatro digitos:"))
num1=(3141//1047)
num2=(3141//3141)
num3=(3141//785)
num4=(3141%4)

print(num1+num2+num3+num4)


-- EXECUTION TIME:
0.14
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
9
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:33:21) 
-- CODE:
var=int(input("numero inteiro de quatro digitos:"))
num1=(var//1047)
num2=(var//3141)
num3=(var//785)
num4=(var%4)

print(num1+num2+num3+num4)


-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:33:30) 
-- CODE:
var=int(input("numero inteiro de quatro digitos:"))
num1=(var//1047)
num2=(var//3141)
num3=(var//785)
num4=(var%4)

print(num1+num2+num3+num4)


-- EXECUTION TIME:
0.267761
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
22
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:34:44) 
-- CODE:
var=int(input("numero inteiro de quatro digitos:"))
x=(var//1047)+(var//3141)+(var//785)+(var%4)

print(x)


-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:34:49) 
-- CODE:
var=int(input("numero inteiro de quatro digitos:"))
x=(var//1047)+(var//3141)+(var//785)+(var%4)

print(x)


-- EXECUTION TIME:
0.12472
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
22
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:36:33) 
-- CODE:
var=int(input("numero inteiro de quatro digitos:"))
x=(var//1047)
y=(var//3141)
z=(var//785)
w=(var%4)

print(x+y+z+w)


-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:36:40) 
-- CODE:
var=int(input("numero inteiro de quatro digitos:"))
x=(var//1047)
y=(var//3141)
z=(var//785)
w=(var%4)

print(x+y+z+w)


-- EXECUTION TIME:
0.169307
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
22
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
